# DP_Hairs_simulation_and_visualization

./: readme.txt
data/: config.txt  config_black.txt  config_blond.txt  config_brown.txt  hair.vs  hair_input_test_01.txt  hair_input_test_02.txt  perpixellight.fs  test1.vs  test3.fs  test6.fs  test6.gs  test6.vs
data/shaders/: color.vs  diffuse.vs  hair.fs  hair.gs  hair.vs  hair2.gs  hair3.gs  light.fs  light.vs  mytest.gs  test2.vs  test4.vs  test5.vs
source/: CMakeLists.txt
source/data/: CMakeLists.txt  perpixellight_cartoon.fs
source/data/glsl/: basic_textured.vs  bumpmap.fs  bumpmap.vs  flat.vs  geometry_instancing.vs  grayscale.fs  heat.fs  image_processing.fs  interlaced.fs  invert.fs  mandelbrot.fs  mandelbrot.vs  perpixellight.vs  perpixellight_cartoon_mrt.fs  perpixellight_cartoon_mrt2.fs  perpixellight_interlaced.fs  sepia.fs  spec_tex0.vs  specular.vs  terrain.fs  terrain.vs  terrain_nd.fs  terrain_ut.vs  texture_1d_array.fs  texture_2d_array.fs  texture_heat.fs  triangle_fur.gs  vertex_blend.vs  volume_clip.vs  volume_color_shading_rgb.fs  volume_color_shading_rgb_clip.fs  volume_color_shading_rgba.fs  volume_color_shading_rgba_clip.fs  volume_luminance.fs  volume_luminance_light.fs  volume_luminance_light.vs  volume_raycast01.fs  volume_raycast02.fs  volume_raycast03.fs  volume_raycast_isosurface.fs  (+2 more)
source/data/models/3ds/: skull.3ds
source/docs/: CMakeLists.txt  Doxyfile  header.html
source/docs/dox/: mainpage.dox  pagChangelog.dox  pagContacts.dox  pagContributing.dox  pagCredits.dox  pagDesign.dox  pagFAQ.dox  pagGallery.dox  pagGuideFramebufferObject.dox  pagGuideTextures.dox  pagInstall.dox  pagIntro.dox  pagKeyFeatures.dox  pagKnowledgeBase.dox  pagLearning.dox  pagLicensing.dox  pagMainClasses.dox  pagOpenGL.dox
source/src/: CMakeLists.txt
source/src/examples/: Win32_direct.cpp
source/src/hairs/: CMakeLists.txt  CoreFunctions.cpp  CoreFunctions.hpp  Hair.cpp  Hair.hpp  HairEffect.cpp  HairEffect.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  Physics.cpp  Physics.hpp  Settings.cpp  Settings.hpp  SettingsWindow.cpp  SettingsWindow.hpp
source/src/vlGraphics/: Font.cpp  OpenGLContext.cpp  Renderer.cpp
source/src/vlVolume/: RaycastVolume.cpp  RaycastVolume.hpp
(+4 files in other folders)
